2009-10-21  Pedro Romano  <pmcnr72@gmail.com>

        Reviewed by Kevin Ollivier.

        Include 'WebFrame.h' declared classes in wxPython bindings.
        
        https://bugs.webkit.org/show_bug.cgi?id=30504

        * bindings/python/webview.i:

2009-10-18  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Add the ability to specify a proxy for wxWebKit.
        
        https://bugs.webkit.org/show_bug.cgi?id=30446

        * WebView.cpp:
        (curlProxyType):
        (wxWebView::SetProxyInfo):
        * WebView.h:

2009-10-18  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Add basic database support to wx API
        
        https://bugs.webkit.org/show_bug.cgi?id=30445

        * WebKitSupport/ChromeClientWx.cpp:
        (WebCore::ChromeClientWx::exceededDatabaseQuota):
        * WebView.cpp:
        (wxWebView::Create):
        (wxWebView::SetDatabaseDirectory):
        (wxWebView::GetDatabaseDirectory):
        * WebView.h:

2009-10-16  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Optionally allow the user to zoom text using the mouse wheel.
        
        https://bugs.webkit.org/show_bug.cgi?id=30444

        * WebView.cpp:
        (wxWebView::wxWebView):
        (wxWebView::OnMouseEvents):
        * WebView.h:

2009-10-16  Kevin Ollivier  <kevino@theolliviers.com>

        wxMSW non-precomp headers build fix.

        * WebView.cpp:

2009-10-15  Robin Dunn  <robin@alldunn.com>

        Reviewed by Kevin Ollivier.

        Update the wxPython simple.py sample to match current wxWebKit API.
        
        https://bugs.webkit.org/show_bug.cgi?id=30406

        * bindings/python/samples/simple.py:

2009-10-08  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move executeScript from FrameLoader to ScriptController
        https://bugs.webkit.org/show_bug.cgi?id=30200

        Update API call.
