@@ -836,8 +836,8 @@ void FrameLoaderClientWx::windowObjectCleared()
     if (m_webView) {
         wxWebViewWindowObjectClearedEvent wkEvent(m_webView);
         Frame* coreFrame = m_webView->GetMainFrame()->GetFrame();
-        JSGlobalContextRef context = toGlobalRef(coreFrame->script()->globalObject()->globalExec());
-        JSObjectRef windowObject = toRef(coreFrame->script()->globalObject());
+        JSGlobalContextRef context = toGlobalRef(coreFrame->script()->globalObject(mainThreadNormalWorld())->globalExec());
+        JSObjectRef windowObject = toRef(coreFrame->script()->globalObject(mainThreadNormalWorld()));
         wkEvent.SetJSContext(context);
         wkEvent.SetWindowObject(windowObject);
         m_webView->GetEventHandler()->ProcessEvent(wkEvent);
