@@ -1,3 +1,12 @@
+2009-10-23  Kevin Ollivier  <kevino@theolliviers.com>
+
+        wx build fix. Update the globalObject calls after changes.
+
+        * WebFrame.cpp:
+        (wxWebFrame::RunScript):
+        * WebKitSupport/FrameLoaderClientWx.cpp:
+        (WebCore::FrameLoaderClientWx::windowObjectCleared):
+
 2009-10-21  Pedro Romano  <pmcnr72@gmail.com>
 
         Reviewed by Kevin Ollivier.
